attorney features
